--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -18,7 +18,7 @@
   }
   
   .navbar {
-    background-color: #1f5156;
+    background-color: #fff;
     height: 80px;
     display: flex;
     justify-content: center;
